--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "upsoftware",
   "version": "1.0.0",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/upsoftware.umd.cjs",
   "module": "./dist/upsoftware.js",
   "exports": {
@@ -19,11 +21,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
+    "quasar": "^2.16.4",
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.7.0",
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.33.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vue-tsc": "^1.4.2"
