--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.11",
+    "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "quasar": "^2.16.4",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.7.0",
