--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "quasar": "^2.16.4",
+    "vite-plugin-sass-dts": "^1.3.22",
     "vue": "^3.2.47",
     "vue-router": "4"
   },
@@ -32,7 +33,7 @@
     "@quasar/vite-plugin": "^1.7.0",
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "^4.2.3",
-    "sass": "^1.33.0",
+    "sass": "^1.77.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vue-tsc": "^1.4.2"
