--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "@quasar/extras": "^1.16.11",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.39",
     "quasar": "^2.16.4",
+    "tailwindcss": "^3.4.4",
     "vite-plugin-sass-dts": "^1.3.22",
     "vue": "^3.2.47",
     "vue-router": "4"
@@ -35,6 +39,7 @@
     "@types/node": "^20.2.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "cpx": "^1.5.0",
+    "postcss-import": "^16.1.0",
     "sass": "^1.77.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
