--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run copy-vue-files",
+    "build": "vite build",
     "copy-vue-files": "cpx 'src/**/*.{vue,scss,css}' dist/",
     "types": "vue-tsc ",
     "preview": "vite preview"
